# MediAssist_AI_Powered_Scribe

./: .gitignore  Dockerfile  README.md  app.py  cases.csv  clinical_logs.csv  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  users.csv
.github/workflows/: ci.yml
app/: __init__.py  config.py  extensions.py  models.py  utils.py
app/routes/: admin.py  auth.py  doctor.py  main.py  patient.py
app/services/: ai_service.py  medical_service.py  pdf_service.py
static/css/: styles.css
static/js/: app.js
templates/: _language_toggle.html  _settings_popup.html  admin_logs.html  cases.html  doctor_dashboard.html  doctor_edit.html  doctor_login.html  doctor_view.html  index.html  intake.html  landing.html  mlops_dashboard.html  patient_login.html  patient_result.html  register.html
templates/errors/: 429.html
tests/: __init__.py  conftest.py  test_audit_engine.py  test_coverage_gap.py  test_decorators.py  test_helpers.py  test_integration.py  test_medical_logic.py  test_migrate_db.py  test_models.py  test_routes.py  test_security.py
translations/: en.json  hi.json
utils/: migrate_db.py
