[project]
name = "mediassist-ai-scribe"
version = "1.0.0"
description = "AI-Powered Clinical Scribe & Patient Communication System"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.mypy]
python_version = "3.9"
strict = false
warn_return_any = true
warn_unused_ignores = false
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Allow subclassing Any types (for db.Model)
disallow_subclassing_any = false

# Exclude test files from strictest checks
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=. --cov-report=term-missing --cov-report=html --cov-fail-under=90"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "venv/*",
    ".venv/*",
    "*/__pycache__/*",
    "*/migrations/*"
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass"
]
show_missing = true
fail_under = 90

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist"
]

[tool.black]
line-length = 120
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | venv
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["app", "utils"]
skip = ["venv", ".venv"]
